--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>hola mundo</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leyes de la Termodinámica</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Menú de navegación -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Historia</a></li>
+            <li><a href="primera-ley.html">Primera Ley</a></li>
+            <li><a href="segunda-ley.html">Segunda Ley</a></li>
+            <li><a href="tercera-ley.html">Tercera Ley</a></li>
+        </ul>
+    </nav>
+
+    <!-- Contenido principal -->
+    <section class="main-content">
+        <h1>Historia de la Termodinámica</h1>
+        <p>La termodinámica es una rama de la física que estudia las interacciones entre el calor, el trabajo y la energía. Surgió en el siglo XIX como resultado de estudios sobre las máquinas de vapor y las leyes que gobiernan la energía.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Steam_engine_in_its_full_power.jpg" alt="Máquina de vapor" width="400">
+        <p>Los estudios sobre el calor y el trabajo llevaron al desarrollo de las leyes de la termodinámica, las cuales son fundamentales en la ciencia y la ingeniería.</p>
+    </section>
+
+    <footer>
+        <p>© 2024 - Página dedicada a las leyes de la termodinámica</p>
+    </footer>
+</body>
+</html>
+
