--- a/index.html
+++ b/index.html
@@ -20,14 +20,24 @@
     <!-- Contenido principal -->
     <section class="main-content">
         <h1>Historia de la Termodinámica</h1>
-        <p>La termodinámica es una rama de la física que estudia las interacciones entre el calor, el trabajo y la energía. Surgió en el siglo XIX como resultado de estudios sobre las máquinas de vapor y las leyes que gobiernan la energía.</p>
+        <p>La termodinámica es una disciplina fundamental en la física que estudia las relaciones entre el calor, el trabajo y la energía. Surgió a principios del siglo XIX, influenciada en gran medida por los estudios sobre las máquinas de vapor.</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Steam_engine_in_its_full_power.jpg" alt="Máquina de vapor" width="400">
-        <p>Los estudios sobre el calor y el trabajo llevaron al desarrollo de las leyes de la termodinámica, las cuales son fundamentales en la ciencia y la ingeniería.</p>
+        <h2>El origen de la termodinámica</h2>
+        <p>El desarrollo de la termodinámica comenzó con los estudios de Robert Boyle y Denis Papin en el siglo XVII, quienes investigaron el comportamiento de los gases y la presión. Sin embargo, no fue hasta el siglo XIX cuando los científicos, como Sadi Carnot, formularon las primeras leyes fundamentales de la termodinámica.</p>
+        
+        <h2>Máquinas de vapor y energía</h2>
+        <p>Las máquinas de vapor fueron clave en la Revolución Industrial, y su eficiencia inspiró estudios más detallados sobre la energía y la conversión del calor en trabajo. James Watt, famoso por mejorar las máquinas de vapor, es también una figura central en el estudio de la energía.</p>
+        
+        <h2>Dato curioso</h2>
+        <p>¿Sabías que el término "termodinámica" fue acuñado por William Thomson (Lord Kelvin) en 1854? La palabra combina las raíces griegas "therme" (calor) y "dynamis" (fuerza).</p>
     </section>
 
     <footer>
         <p>© 2024 - Página dedicada a las leyes de la termodinámica</p>
     </footer>
+</body>
+</html>
+
 </body>
 </html>
 
