--- a/primera-ley.html
+++ b/primera-ley.html
@@ -20,9 +20,21 @@
     <!-- Contenido principal -->
     <section class="main-content">
         <h1>Primera Ley de la Termodinámica</h1>
-        <p>La primera ley de la termodinámica establece que la energía no se crea ni se destruye, solo se transforma. Es una forma de la ley de conservación de la energía aplicada a los sistemas termodinámicos.</p>
+        <p>La primera ley de la termodinámica, también conocida como la **Ley de Conservación de la Energía**, establece que la energía no puede ser creada ni destruida, solo transformada de una forma a otra.</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Laws_of_thermodynamics.png/800px-Laws_of_thermodynamics.png" alt="Primera Ley de la Termodinámica" width="400">
-        <p>Esta ley es esencial para entender cómo funciona la transferencia de energía en sistemas físicos, como las máquinas de vapor o el motor de un automóvil.</p>
+        
+        <h2>Fórmula de la Primera Ley</h2>
+        <p>La ecuación matemática más comúnmente utilizada para describir esta ley es:</p>
+        <pre>
+            ΔU = Q - W
+        </pre>
+        <p>Aquí, ΔU representa el cambio en la energía interna del sistema, Q es el calor añadido al sistema y W es el trabajo realizado por el sistema.</p>
+
+        <h2>Aplicaciones de la Primera Ley</h2>
+        <p>La primera ley es fundamental en el diseño de motores térmicos y en la comprensión de los procesos de energía. Por ejemplo, esta ley explica cómo los motores de automóviles convierten la energía química del combustible en energía mecánica.</p>
+
+        <h2>Dato curioso</h2>
+        <p>¿Sabías que esta ley también es aplicable a los sistemas biológicos? Las células de los seres vivos convierten la energía química de los alimentos en energía que les permite moverse y crecer.</p>
     </section>
 
     <footer>
