--- a/segunda-ley.html
+++ b/segunda-ley.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Menú de navegación -->
     <nav>
         <ul>
             <li><a href="index.html">Historia</a></li>
@@ -16,11 +17,24 @@
         </ul>
     </nav>
 
+    <!-- Contenido principal -->
     <section class="main-content">
         <h1>Segunda Ley de la Termodinámica</h1>
-        <p>La segunda ley de la termodinámica afirma que la entropía de un sistema cerrado siempre aumenta con el tiempo. Esto implica que los procesos naturales tienden a moverse hacia un estado de mayor desorden o aleatoriedad.</p>
+        <p>La segunda ley establece que en cualquier proceso natural, la entropía de un sistema cerrado siempre aumenta. Esto significa que los sistemas tienden al desorden con el tiempo.</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Entropy-Energy_balance.png/800px-Entropy-Energy_balance.png" alt="Segunda Ley de la Termodinámica" width="400">
-        <p>Esta ley es clave para comprender el flujo de calor y la eficiencia de las máquinas térmicas.</p>
+        
+        <h2>Fórmula y Entropía</h2>
+        <p>La entropía es una medida del desorden en un sistema. La segunda ley también puede expresarse matemáticamente como:</p>
+        <pre>
+            ΔS ≥ 0
+        </pre>
+        <p>Donde ΔS es el cambio en la entropía. En un proceso reversible, ΔS = 0, pero en procesos irreversibles, ΔS > 0.</p>
+
+        <h2>Aplicaciones prácticas</h2>
+        <p>Esta ley es fundamental para entender la eficiencia de las máquinas térmicas, como los motores de combustión interna y las plantas de energía.</p>
+
+        <h2>Dato curioso</h2>
+        <p>¿Sabías que la segunda ley es la razón por la cual no puedes crear una máquina de movimiento perpetuo? Siempre hay pérdidas de energía en forma de calor.</p>
     </section>
 
     <footer>
