--- a/tercera-ley.html
+++ b/tercera-ley.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Menú de navegación -->
     <nav>
         <ul>
             <li><a href="index.html">Historia</a></li>
@@ -16,11 +17,20 @@
         </ul>
     </nav>
 
+    <!-- Contenido principal -->
     <section class="main-content">
         <h1>Tercera Ley de la Termodinámica</h1>
-        <p>La tercera ley de la termodinámica establece que, al acercarse el cero absoluto, la entropía de un sistema tiende a cero. Esto significa que un sistema en el cero absoluto está en su estado de orden máximo.</p>
+        <p>La tercera ley establece que, a medida que un sistema se aproxima al cero absoluto, su entropía tiende a cero. Esto significa que en el cero absoluto, el sistema está en su estado más ordenado posible.</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Third-law-graph.png/800px-Third-law-graph.png" alt="Tercera Ley de la Termodinámica" width="400">
-        <p>Esta ley es especialmente importante en el estudio de los gases y sistemas a bajas temperaturas.</p>
+        
+        <h2>El cero absoluto</h2>
+        <p>El cero absoluto es la temperatura más baja posible, 0 Kelvin o -273,15 grados Celsius. En esta temperatura, las partículas dejan de moverse completamente.</p>
+
+        <h2>Aplicaciones de la Tercera Ley</h2>
+        <p>Esta ley es crucial para la física de bajas temperaturas, como en la investigación de superconductores y superfluidos. A temperaturas cercanas al cero absoluto, algunos materiales adquieren propiedades especiales, como la superconductividad, donde la resistencia eléctrica desaparece.</p>
+
+        <h2>Dato curioso</h2>
+        <p>¿Sabías que alcanzar el cero absoluto es imposible? Aunque podemos acercarnos mucho, nunca se ha logrado alcanzar esta temperatura en un experimento.</p>
     </section>
 
     <footer>
