--- a/segunda-ley.html
+++ b/segunda-ley.html
@@ -11,6 +11,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Historia</a></li>
+             <li><a href="ley-cero.html">Ley Cero</a></li>
             <li><a href="primera-ley.html">Primera Ley</a></li>
             <li><a href="segunda-ley.html">Segunda Ley</a></li>
             <li><a href="tercera-ley.html">Tercera Ley</a></li>
