--- a/primera-ley.html
+++ b/primera-ley.html
@@ -22,7 +22,7 @@
     <section class="main-content">
         <h1>Primera Ley de la Termodinámica</h1>
         <p>La primera ley de la termodinámica, también conocida como la **Ley de Conservación de la Energía**, establece que la energía no puede ser creada ni destruida, solo transformada de una forma a otra.</p>
-        <img src="https://image.jimcdn.com/app/cms/image/transf/dimension=620x10000:format=jpg/path/sa64d4131059e41eb/image/i1b926a05948b15d6/version/1602599556/image.jpg" alt="Primera Ley de la Termodinámica" width="400">
+        <img src="https://1.bp.blogspot.com/-StHKEhD-e_4/YCtN7uKpAtI/AAAAAAAAAU0/Yl-NDE41H5oSnSf0olyPFYwoRhqYuC3KQCLcBGAsYHQ/s694/primera.png" alt="Primera Ley de la Termodinámica" width="400">
         
         <h2>Fórmula de la Primera Ley</h2>
         <p>La ecuación matemática más comúnmente utilizada para describir esta ley es:</p>
