--- a/segunda-ley.html
+++ b/segunda-ley.html
@@ -22,7 +22,7 @@
     <section class="main-content">
         <h1>Segunda Ley de la Termodinámica</h1>
         <p>La segunda ley establece que en cualquier proceso natural, la entropía de un sistema cerrado siempre aumenta. Esto significa que los sistemas tienden al desorden con el tiempo.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Entropy-Energy_balance.png/800px-Entropy-Energy_balance.png" alt="Segunda Ley de la Termodinámica" width="400">
+        <img src="https://cdn.goconqr.com/uploads/media/image/16216583/desktop_160960b8-17c4-4af2-9b93-f61f51817027.jpg" alt="Segunda Ley de la Termodinámica" width="400">
         
         <h2>Fórmula y Entropía</h2>
         <p>La entropía es una medida del desorden en un sistema. La segunda ley también puede expresarse matemáticamente como:</p>
