--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <footer>
-        <p>© 2024 - Página realizada por kevin vasqurz y ximara peraza</p>
+        <p>© 2024 - Página realizada por kevin vásquez y ximara peraza</p>
     </footer>
 </body>
 </html>
