--- a/primera-ley.html
+++ b/primera-ley.html
@@ -39,7 +39,7 @@
     </section>
 
     <footer>
-        <p>© 2024 - Página realizada por kevin vasqurz y ximara peraza</p>
+        <p>© 2024 -Página realizada por kevin vásquez y ximara peraza</p>
     </footer>
 </body>
 </html>
